# django-polls

./: LICENSE  README.md
django-polls/: LICENSE  setup.cfg
django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
django-polls/polls/: admin.py  models.py  tests.py  urls.py  views.py
django-polls/polls/migrations/: 0001_initial.py
django-polls/polls/static/polls/: style.css
django-polls/polls/templates/polls/: detail.html  index.html  results.html
mysite/: LICENSE  db.sqlite3  requirements.txt
mysite/mysite/: settings.py  urls.py
mysite/templates/admin/: base_site.html
